cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_make_existing_model.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: off"
info:
  program: cot
  args:
    - migration
    - make
    - "-q"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[1m[92m    Creating[0m Model 'cot_test__test'
[1m[32m     Created[0m Model 'cot_test__test'
[1m[92m    Creating[0m Migration 'm_0001_initial'
[1m[92m    Creating[0m Migration file '/tmp/TEMP_PATH/cot-test/src/migrations/m_0001_initial.rs'
[1m[32m     Created[0m Migration file '/tmp/TEMP_PATH/cot-test/src/migrations/m_0001_initial.rs'
[1m[32m     Created[0m Migration 'm_0001_initial'
